# neko_agent

./: .env.example  .gitignore  .gitmodules  .mcp-setup.md  .mcp.json  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  flake.nix  justfile  noted.md  pyproject.toml  shell.nix
.github/workflows/: docs.yml
docker-compose/: neko-server-dstack.yaml  neko-server.yaml  ssh-gpu-1.yaml  ssh-gpu-all.yaml  ssh-no-gpu.yaml
docker-compose/neko-server/: compose.yaml
docs/: README.md  book.toml  detailed_webrtc_analysis.md  neko.md  webrtc_branch_comparison.md  webrtc_detailed_trace.md  webrtc_flow_analysis.md
docs/src/: SUMMARY.md  introduction.md
docs/src/developer-guide/: architecture.md  components.md  development.md  mosaicml-streaming.md  neko.md  nix-flake-packaging.md  nix-flake.md
docs/src/developer-guide/components/: agent.md  capture.md  manual.md  yap.md
docs/src/future/: api-mode-design.md  python-webrtc-upgrade-guide.md  vllm-agents.md
docs/src/reference/: glossary.md  library.md
docs/src/user-guide/: agent.md  capture.md  getting-started.md  manual-control.md  train.md  yap.md
nix/: neko-compose.nix
overlays/: aioice.nix  aiortc.nix  bitsandbytes.nix  cached-path.nix  einops.nix  ema-pytorch.nix  f5-tts.nix  pylibsrtp.nix  streaming.nix  transformers-stream-generator.nix  triton.nix  vmm-cli.nix  vocos.nix  znver2-flags.nix
overlays/pi-zero-pytorch/: accelerated-scan.nix  adam-atan2-pytorch.nix  assoc-scan.nix  bidirectional-cross-attention.nix  einx.nix  evolutionary-policy-optimization.nix  hl-gauss-pytorch.nix  hyper-connections.nix  pi-zero-pytorch.nix  rotary-embedding-torch.nix  torchtyping.nix  x-mlps-pytorch.nix  x-transformers.nix
src/: agent.py  agent_refactored.py  capture.py  capture_refactored.py  manual.py  manual_refactored.py  metrics.py  train.py  utils.py  yap.py  yap_refactored.py
src/agents/: README.md  __init__.py  base.py  gpu_agent.py  parsing.py  prompt_strategies.py  qwen3vl_agent.py  reasoning.py  remote_agent.py  showui_agent.py
src/neko/: __init__.py  config.py  logging.py  utils.py  webrtc.py  websocket.py
src/neko_comms/: __init__.py  actions.py  audio.py  auth.py  base.py  broker.py  frame_source.py  http_client.py  signaler.py  types.py  webrtc_client.py
tests/: conftest.py  test_config.py  test_logging.py  test_utils.py  test_webrtc.py  test_websocket.py
